fix: discord invite link update

--- a/app/docs/page.mdx
+++ b/app/docs/page.mdx
@@ -109,7 +109,7 @@ For each core topic, you’ll find:
 
 Join our supportive developer community on **Discord** — ask questions, get feedback, and connect with others on the same journey.
 
-[Join Our Discord Server](https://discord.gg/JXjceurNJA)
+[Join Our Discord Server](https://discord.gg/hECbGhyY5b)
 
 ---
 
